gen/me/sangs/effects/script/grammar/AffectScriptParser.java
// Generated from /Users/dsa28s/Desktop/intellij-affectscript-plugin/src/me/sangs/effects/script/grammar/AffectScript.g4 by ANTLR 4.7
package me.sangs.effects.script.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AffectScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, USE_K=11, SCRIPT_k=12, CREATE_K=13, COMPOSITION_K=14, SHAPE_K=15, 
		SET_K=16, TO_K=17, ADD_K=18, TEXT_K=19, OPEN_K=20, SHOW_K=21, MSGBOX_K=22, 
		IMPORT_K=23, FILE_K=24, SELECT=25, SOLID_K=26, APPLY_K=27, EFFECT_K=28, 
		PARAMS_K=29, NEW_K=30, FOLDER_K=31, ANNOTATION_MARK=32, MOVE_K=33, NEW_=34, 
		RECTANGLE_K=35, SETVALUES_FUNC=36, LPAREN=37, RPAREN=38, COLON=39, COMMA=40, 
		LBRACK=41, RBRACK=42, LBRACE=43, RBRACE=44, IF=45, ELSE=46, WHILE=47, 
		VAR=48, EQUAL=49, RETURN=50, PRINT=51, FUNC=52, TYPEINT=53, TYPEFLOAT=54, 
		TYPESTRING=55, TYPEBOOLEAN=56, TRUE=57, FALSE=58, SUB=59, BANG=60, MUL=61, 
		DIV=62, ADD=63, LT=64, LE=65, EQUAL_EQUAL=66, NOT_EQUAL=67, GT=68, GE=69, 
		OR=70, AND=71, DOT=72, LINE_COMMENT=73, COMMENT=74, ID=75, ANNO=76, INT=77, 
		FLOAT=78, STRING=79, WS=80, ERRCHAR=81;
	public static final int
		RULE_affectscript = 0, RULE_usescript = 1, RULE_annotation = 2, RULE_create = 3, 
		RULE_set = 4, RULE_setprop = 5, RULE_add = 6, RULE_setvalues = 7, RULE_open = 8, 
		RULE_msgbox = 9, RULE_move = 10, RULE_new_b = 11, RULE_applyeffect = 12, 
		RULE_returnfunction = 13, RULE_function = 14, RULE_formal_args = 15, RULE_param_args = 16, 
		RULE_annotation_args = 17, RULE_formal_arg = 18, RULE_param_arg = 19, 
		RULE_annotation_arg = 20, RULE_createkeywords = 21, RULE_type = 22, RULE_block = 23, 
		RULE_moduleblock = 24, RULE_setvalblock = 25, RULE_msgblock = 26, RULE_importfile = 27, 
		RULE_allstatement = 28, RULE_statement = 29, RULE_setvalstatement = 30, 
		RULE_setvalexpr = 31, RULE_multivariable = 32, RULE_modulestatement = 33, 
		RULE_vardef = 34, RULE_expr = 35, RULE_setexpr = 36, RULE_operator = 37, 
		RULE_call_expr = 38, RULE_expr_list = 39, RULE_primary = 40;
	public static final String[] ruleNames = {
		"affectscript", "usescript", "annotation", "create", "set", "setprop", 
		"add", "setvalues", "open", "msgbox", "move", "new_b", "applyeffect", 
		"returnfunction", "function", "formal_args", "param_args", "annotation_args", 
		"formal_arg", "param_arg", "annotation_arg", "createkeywords", "type", 
		"block", "moduleblock", "setvalblock", "msgblock", "importfile", "allstatement", 
		"statement", "setvalstatement", "setvalexpr", "multivariable", "modulestatement", 
		"vardef", "expr", "setexpr", "operator", "call_expr", "expr_list", "primary"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'question'", "'params'", "'oval'", "'yes'", "'no'", "'>>>'", "'answer'", 
		"'->'", "'rgb'", "'.'", "'use'", "'script'", "'create'", "'composition'", 
		"'shape'", "'set'", "'to'", "'add'", "'text'", "'open'", "'show'", "'messagebox'", 
		"'import'", "'file'", "'select'", "'solid'", "'apply'", "'effect'", "'parameters'", 
		"'new'", "'folder'", "'@'", "'move'", null, "'rectangle'", "'setValues'", 
		"'('", "')'", "':'", "','", "'['", "']'", "'{'", "'}'", "'if'", "'else'", 
		"'while'", "'var'", "'='", "'return'", "'print'", "'func'", "'int'", "'float'", 
		"'string'", "'boolean'", "'true'", "'false'", "'-'", "'!'", "'*'", "'/'", 
		"'+'", "'<'", "'<='", "'=='", "'!='", "'>'", "'>='", "'||'", "'&&'", "' . '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "USE_K", 
		"SCRIPT_k", "CREATE_K", "COMPOSITION_K", "SHAPE_K", "SET_K", "TO_K", "ADD_K", 
		"TEXT_K", "OPEN_K", "SHOW_K", "MSGBOX_K", "IMPORT_K", "FILE_K", "SELECT", 
		"SOLID_K", "APPLY_K", "EFFECT_K", "PARAMS_K", "NEW_K", "FOLDER_K", "ANNOTATION_MARK", 
		"MOVE_K", "NEW_", "RECTANGLE_K", "SETVALUES_FUNC", "LPAREN", "RPAREN", 
		"COLON", "COMMA", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "IF", "ELSE", 
		"WHILE", "VAR", "EQUAL", "RETURN", "PRINT", "FUNC", "TYPEINT", "TYPEFLOAT", 
		"TYPESTRING", "TYPEBOOLEAN", "TRUE", "FALSE", "SUB", "BANG", "MUL", "DIV", 
		"ADD", "LT", "LE", "EQUAL_EQUAL", "NOT_EQUAL", "GT", "GE", "OR", "AND", 
		"DOT", "LINE_COMMENT", "COMMENT", "ID", "ANNO", "INT", "FLOAT", "STRING", 
		"WS", "ERRCHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AffectScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AffectScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AffectscriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AffectScriptParser.EOF, 0); }
		public List<UsescriptContext> usescript() {
			return getRuleContexts(UsescriptContext.class);
		}
		public UsescriptContext usescript(int i) {
			return getRuleContext(UsescriptContext.class,i);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<CreateContext> create() {
			return getRuleContexts(CreateContext.class);
		}
		public CreateContext create(int i) {
			return getRuleContext(CreateContext.class,i);
		}
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public List<SetpropContext> setprop() {
			return getRuleContexts(SetpropContext.class);
		}
		public SetpropContext setprop(int i) {
			return getRuleContext(SetpropContext.class,i);
		}
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public List<SetvaluesContext> setvalues() {
			return getRuleContexts(SetvaluesContext.class);
		}
		public SetvaluesContext setvalues(int i) {
			return getRuleContext(SetvaluesContext.class,i);
		}
		public List<OpenContext> open() {
			return getRuleContexts(OpenContext.class);
		}
		public OpenContext open(int i) {
			return getRuleContext(OpenContext.class,i);
		}
		public List<MsgboxContext> msgbox() {
			return getRuleContexts(MsgboxContext.class);
		}
		public MsgboxContext msgbox(int i) {
			return getRuleContext(MsgboxContext.class,i);
		}
		public List<MoveContext> move() {
			return getRuleContexts(MoveContext.class);
		}
		public MoveContext move(int i) {
			return getRuleContext(MoveContext.class,i);
		}
		public List<ApplyeffectContext> applyeffect() {
			return getRuleContexts(ApplyeffectContext.class);
		}
		public ApplyeffectContext applyeffect(int i) {
			return getRuleContext(ApplyeffectContext.class,i);
		}
		public List<ImportfileContext> importfile() {
			return getRuleContexts(ImportfileContext.class);
		}
		public ImportfileContext importfile(int i) {
			return getRuleContext(ImportfileContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<New_bContext> new_b() {
			return getRuleContexts(New_bContext.class);
		}
		public New_bContext new_b(int i) {
			return getRuleContext(New_bContext.class,i);
		}
		public AffectscriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectscript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterAffectscript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitAffectscript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitAffectscript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectscriptContext affectscript() throws RecognitionException {
		AffectscriptContext _localctx = new AffectscriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_affectscript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(96);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(82);
					usescript();
					}
					break;
				case 2:
					{
					setState(83);
					annotation();
					}
					break;
				case 3:
					{
					setState(84);
					create();
					}
					break;
				case 4:
					{
					setState(85);
					set();
					}
					break;
				case 5:
					{
					setState(86);
					setprop();
					}
					break;
				case 6:
					{
					setState(87);
					add();
					}
					break;
				case 7:
					{
					setState(88);
					setvalues();
					}
					break;
				case 8:
					{
					setState(89);
					open();
					}
					break;
				case 9:
					{
					setState(90);
					msgbox();
					}
					break;
				case 10:
					{
					setState(91);
					move();
					}
					break;
				case 11:
					{
					setState(92);
					applyeffect();
					}
					break;
				case 12:
					{
					setState(93);
					importfile();
					}
					break;
				case 13:
					{
					setState(94);
					function();
					}
					break;
				case 14:
					{
					setState(95);
					new_b();
					}
					break;
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << USE_K) | (1L << SET_K) | (1L << ADD_K) | (1L << OPEN_K) | (1L << SHOW_K) | (1L << APPLY_K) | (1L << MOVE_K) | (1L << SETVALUES_FUNC) | (1L << FUNC))) != 0) || _la==ID || _la==ANNO );
			setState(100);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsescriptContext extends ParserRuleContext {
		public UsescriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usescript; }
	 
		public UsescriptContext() { }
		public void copyFrom(UsescriptContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportScriptContext extends UsescriptContext {
		public TerminalNode ID() { return getToken(AffectScriptParser.ID, 0); }
		public ImportScriptContext(UsescriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterImportScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitImportScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitImportScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsescriptContext usescript() throws RecognitionException {
		UsescriptContext _localctx = new UsescriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_usescript);
		try {
			_localctx = new ImportScriptContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(USE_K);
			setState(103);
			match(SCRIPT_k);
			setState(104);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
	 
		public AnnotationContext() { }
		public void copyFrom(AnnotationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AnnotationsContext extends AnnotationContext {
		public TerminalNode ANNO() { return getToken(AffectScriptParser.ANNO, 0); }
		public Annotation_argsContext annotation_args() {
			return getRuleContext(Annotation_argsContext.class,0);
		}
		public AnnotationsContext(AnnotationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterAnnotations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitAnnotations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitAnnotations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_annotation);
		try {
			_localctx = new AnnotationsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ANNO);
			setState(107);
			match(LPAREN);
			setState(108);
			annotation_args();
			setState(109);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContext extends ParserRuleContext {
		public CreateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create; }
	 
		public CreateContext() { }
		public void copyFrom(CreateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreateLayerContext extends CreateContext {
		public TerminalNode ID() { return getToken(AffectScriptParser.ID, 0); }
		public CreatekeywordsContext createkeywords() {
			return getRuleContext(CreatekeywordsContext.class,0);
		}
		public CreateLayerContext(CreateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterCreateLayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitCreateLayer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitCreateLayer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContext create() throws RecognitionException {
		CreateContext _localctx = new CreateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_create);
		try {
			_localctx = new CreateLayerContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(112);
			match(EQUAL);
			setState(113);
			match(CREATE_K);
			setState(114);
			createkeywords();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
	 
		public SetContext() { }
		public void copyFrom(SetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetPropertyContext extends SetContext {
		public List<TerminalNode> ID() { return getTokens(AffectScriptParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AffectScriptParser.ID, i);
		}
		public SetexprContext setexpr() {
			return getRuleContext(SetexprContext.class,0);
		}
		public SetPropertyContext(SetContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterSetProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitSetProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitSetProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_set);
		try {
			_localctx = new SetPropertyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(SET_K);
			setState(117);
			match(ID);
			setState(118);
			setexpr();
			setState(119);
			match(TO_K);
			setState(120);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetpropContext extends ParserRuleContext {
		public SetpropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setprop; }
	 
		public SetpropContext() { }
		public void copyFrom(SetpropContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetParametersContext extends SetpropContext {
		public TerminalNode STRING() { return getToken(AffectScriptParser.STRING, 0); }
		public TerminalNode ID() { return getToken(AffectScriptParser.ID, 0); }
		public AllstatementContext allstatement() {
			return getRuleContext(AllstatementContext.class,0);
		}
		public SetParametersContext(SetpropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterSetParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitSetParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitSetParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetpropContext setprop() throws RecognitionException {
		SetpropContext _localctx = new SetpropContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setprop);
		try {
			_localctx = new SetParametersContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(SET_K);
			setState(123);
			match(PARAMS_K);
			setState(124);
			match(STRING);
			setState(125);
			match(TO_K);
			setState(126);
			match(ID);
			setState(127);
			match(LBRACE);
			setState(128);
			allstatement();
			setState(129);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddLayerToLayerContext extends AddContext {
		public List<TerminalNode> ID() { return getTokens(AffectScriptParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AffectScriptParser.ID, i);
		}
		public AddLayerToLayerContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterAddLayerToLayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitAddLayerToLayer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitAddLayerToLayer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_add);
		try {
			_localctx = new AddLayerToLayerContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ADD_K);
			setState(132);
			match(ID);
			setState(133);
			match(TO_K);
			setState(134);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetvaluesContext extends ParserRuleContext {
		public SetvaluesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setvalues; }
	 
		public SetvaluesContext() { }
		public void copyFrom(SetvaluesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetValueContext extends SetvaluesContext {
		public TerminalNode ID() { return getToken(AffectScriptParser.ID, 0); }
		public SetvalblockContext setvalblock() {
			return getRuleContext(SetvalblockContext.class,0);
		}
		public SetValueContext(SetvaluesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).enterSetValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffectScriptListener ) ((AffectScriptListener)listener).exitSetValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffectScriptVisitor ) return ((AffectScriptVisitor<? extends T>)visitor).visitSetValue(this);
			else return visitor.visitChildren(this);
		}
	}
